# vis_interpreter_dart

./: .gitmodules  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/vis_interpreter_dart_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: vis_interpreter_dart.podspec
lib/: vis_interpreter_dart.dart  vis_interpreter_dart_bindings_generated.dart
linux/: CMakeLists.txt
macos/: vis_interpreter_dart.podspec
macos/Classes/: vis_interpreter_dart.c
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  vis_interpreter_dart.c  vis_interpreter_dart.cpp  vis_interpreter_dart.h
src/.clangd/index/: vis_interpreter_dart.cpp.237B1CA3E8F2AA59.idx  vis_interpreter_dart.h.C394FA728C7DCAEE.idx
windows/: CMakeLists.txt
